Added Recording storage, listing

--- a/app/src/main/res/layout/activity_canvas_browser.xml
+++ b/app/src/main/res/layout/activity_canvas_browser.xml
@@ -14,7 +14,8 @@
         android:layout_marginEnd="16dp"
         android:clickable="true"
         android:onClick="readSource"
-        android:src="@drawable/ic_open_in_new_white_24dp"
+        android:src="@drawable/ic_find_in_page_black_24dp"
+        android:tint="@android:color/white"
         app:backgroundTint="@color/colorPrimary"
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
