--- a/app/src/main/res/layout/activity_recording_list.xml
+++ b/app/src/main/res/layout/activity_recording_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="nz.zhang.lecturerecordingplayer.RecordingList">
+    tools:context="nz.zhang.lecturerecordingplayer.RecordingListActivity">
 
     <ListView
         android:id="@+id/recordingListView"
