Switched to a RecyclerView, with custom cells

--- a/app/src/main/res/layout/activity_recording_list.xml
+++ b/app/src/main/res/layout/activity_recording_list.xml
@@ -6,10 +6,11 @@
     android:layout_height="match_parent"
     tools:context="nz.zhang.lecturerecordingplayer.RecordingListActivity">
 
-    <ListView
-        android:id="@+id/recordingListView"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recordingListRecycler"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
