Added basic downloading support

--- a/app/src/main/res/layout/activity_recording_view.xml
+++ b/app/src/main/res/layout/activity_recording_view.xml
@@ -25,5 +25,44 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/courseName"
-        tools:text="2017-01-01 12:00" />
+        tools:text="Jan 1, 2017 12:00PM" />
+
+    <Button
+        android:id="@+id/button"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:onClick="loadRecording"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:text="Load"
+        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/courseTime" />
+
+    <Button
+        android:id="@+id/button2"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:onClick="downloadRecording"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:text="@string/download"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/courseTime" />
+
+    <WebView
+        android:id="@+id/downloadWebView"
+        android:layout_width="395dp"
+        android:layout_height="432dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
