Moved most download logic into Recording, allows for parallel d/l

--- a/app/src/main/res/layout/activity_recording_view.xml
+++ b/app/src/main/res/layout/activity_recording_view.xml
@@ -60,6 +60,7 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:indeterminate="false"
         android:max="100"
         android:progress="0"
