Added play intent for opening the system videoplayer

--- a/app/src/main/res/layout/activity_recording_view.xml
+++ b/app/src/main/res/layout/activity_recording_view.xml
@@ -32,12 +32,27 @@
         style="@style/Widget.AppCompat.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:onClick="loadRecording"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:text="@string/download"
+        app:layout_constraintStart_toEndOf="@+id/playButton"
+        app:layout_constraintTop_toBottomOf="@+id/courseTime" />
+
+    <Button
+        android:id="@+id/playButton"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:enabled="false"
+        android:onClick="playRecording"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:text="Play"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/courseTime" />
 
