--- a/app/src/main/res/layout/activity_recording_view.xml
+++ b/app/src/main/res/layout/activity_recording_view.xml
@@ -52,7 +52,7 @@
         android:onClick="playRecording"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:text="Play"
+        android:text="@string/play"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/courseTime" />
 
