work in progress canvas scraper added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,8 +35,7 @@
         android:layout_marginTop="16dp"
         android:drawableLeft="@drawable/ic_remove_red_eye_white_24dp"
         android:drawablePadding="10dp"
-        android:enabled="false"
-        android:onClick="showCanvas"
+        android:onClick="showCanvasScraper"
         android:paddingLeft="14dp"
         android:paddingRight="20dp"
         android:text="@string/autoscan"
