Added HQ download mode

--- a/app/src/main/res/layout/activity_recording_view.xml
+++ b/app/src/main/res/layout/activity_recording_view.xml
@@ -83,4 +83,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/downloadButton" />
 
+    <CheckBox
+        android:id="@+id/hqCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:checked="false"
+        android:text="HQ"
+        app:layout_constraintBottom_toBottomOf="@+id/downloadButton"
+        app:layout_constraintStart_toEndOf="@+id/downloadButton"
+        app:layout_constraintTop_toTopOf="@+id/downloadButton" />
+
 </android.support.constraint.ConstraintLayout>
